Refactor CSS styles for layout and visibility

--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ footer{
     margin-right: 5px;
 }
 .f1{
-    margin-left: 10px;
+    margin-right: 10px;
 }
 .e1{
     position: absolute;
@@ -232,3 +232,4 @@ footer{
     float: left;
 
 }
+
